# TrabalhoPratico02AEDS

./: .gitignore  Arvore.c  Arvore.h  CMakeLists.txt  README.md  main.c
src/functions/: Arvore.c  Eleitor.c  Menu.c
src/header/: Arvore.h
